# grammy

./: .gitignore  Cargo.toml  README.md  app.js  build.rs  index.html  styles.css
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: app.js  index.html  styles.css
src/: api.rs  app.rs  config.rs  lib.rs  main.rs  suggestion.rs
src/app/: api_worker.rs  draft.rs  highlight.rs  history.rs  mod.rs  state.rs  style.rs  text_render.rs  ui.rs
tests/: live_api_test.rs
