[package]
name = "grammy"
version = "0.2.0"
edition = "2021"
description = "A grammar checking desktop app powered by OpenAI"
authors = ["Grammy"]

[dependencies]
iced = { version = "0.14", features = ["tokio", "advanced"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
uuid = { version = "1.0", features = ["v4"] }
directories = "5.0"
confy = "0.6"
image = "0.24"

[build-dependencies]
embed-manifest = "1"
embed-resource = "2"
image = "0.24"

[profile.release]
opt-level = 3
lto = true
